# lab03

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
lab02_src/: CMakeLists_tutorial.txt
lab02_src/examples/: example1.cpp  example2.cpp
lab02_src/include/: print.hpp
lab02_src/sources/: print.cpp
report_images/: 4.1. Создаём build.yml
solver_lib/: CMakeLists.txt  solver.cpp
